--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.0",
+    "expressjs": "^1.0.1",
+    "nodemon": "^2.0.15",
     "open": "^8.4.0",
     "puppeteer": "^13.3.2",
     "xlsx": "^0.18.1"
